--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <section class="jumbotron text-center">
             <div class="container">
                 <h1 class="jumbotron-heading">Hunter Schallhorn</h1>
-                <p class="lead text-muted">Experienced software developer and avid problem solver with a diverse set of
-                    interests, wide knowledge base, and the ability to work with minimal oversight.</p>
+                <p class="lead text-muted">Experienced software developer and avid problem solver with a diverse set of interests, wide knowledge base, and the ability to work with minimal oversight.</p>
                 <p>
                     <a href="https://www.linkedin.com/in/hschallh/" class="btn btn-primary btn-linkedin my-2">
                         <img width="14px" height="14px" src="images/In-White-14px.png"></img> Linkedin
@@ -37,13 +36,48 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
+                            <h4 class="card-header">Rails Scheduler</h4>
+                            <a href="https://cs-scheduler.herokuapp.com">
+                                <img class="card-img-top" src="./images/cs-scheduler-ruby-ar.png" alt="Card image cap">
+                            </a>
+                            <div class="card-body">
+                                <p class="card-text">Schedule web application with user authenication, sessions, and schedule storage</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://cs-scheduler.herokuapp.com" class="btn btn-sm btn-primary">Site</a>
+                                        <a href="https://github.com/hschallh/cs-scheduler/tree/ruby" class="btn btn-sm btn-success">Source</a>
+                                    </div>
+                                    <small class="text-muted ml-3">Ruby on Rails, PostgreSQL, Javascript, Bootstrap</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
+                            <h4 class="card-header">Graphical Web Crawler</h4>
+                            <a href="https://graphicalwebcrawler.herokuapp.com">
+                                <img class="card-img-top" src="./images/grus-ar.png" alt="Card image cap">
+                            </a>
+                            <div class="card-body">
+                                <p class="card-text">Web crawler with a visualization of sites visited</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a href="https://graphicalwebcrawler.herokuapp.com" class="btn btn-sm btn-primary">Site</a>
+                                        <a href="https://github.com/anberns/grus" class="btn btn-sm btn-success">Source</a>
+                                    </div>
+                                    <small class="text-muted ml-3">D3.js, Websockets, Python, MongoDB</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm">
                             <h4 class="card-header">CS Scheduler</h4>
                             <a href="https://hschallh.github.io/cs-scheduler">
                                 <img class="card-img-top" src="./images/cs-scheduler-ar.png" alt="Card image cap">
                             </a>
                             <div class="card-body">
-                                <p class="card-text">Single page, drag and drop scheduler for the Oregon State Comupter
-                                    Science track.</p>
+                                <p class="card-text">Single page, drag and drop scheduler for the Oregon State Comupter Science track.</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="https://hschallh.github.io/cs-scheduler" class="btn btn-sm btn-primary">Site</a>
@@ -54,38 +88,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <h4 class="card-header">Rails Scheduler</h4>
-                            <a href="https://cs-scheduler.herokuapp.com">
-                                <img class="card-img-top" src="./images/cs-scheduler-ruby-ar.png" alt="Card image cap">
-                            </a>
-                            <div class="card-body">
-                                <p class="card-text">Schedule web application with user authenication, sessions, and
-                                    schedule storage</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a href="https://cs-scheduler.herokuapp.com" class="btn btn-sm btn-primary">Site</a>
-                                        <a href="https://github.com/hschallh/cs-scheduler/tree/ruby" class="btn btn-sm btn-success">Source</a>
-                                    </div>
-                                    <small class="text-muted ml-3">Ruby on Rails, PostgreSQL, Javascript, HTML, CSS,
-                                        Bootstrap</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
-
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 </body>
 
