Better desc for grus

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <img class="card-img-top" src="./images/grus-ar.png" alt="Card image cap">
                             </a>
                             <div class="card-body">
-                                <p class="card-text">Web crawler with a visualization of sites visited</p>
+                                <p class="card-text">Web crawler with a force directed graph visualization of interconnected sites</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a href="https://graphicalwebcrawler.herokuapp.com" class="btn btn-sm btn-primary">Site</a>
